--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -37,6 +37,19 @@ page-signup {
     width:auto !important;
     height: auto !important;
   }
+  .paybtn{
+
+    width: 90%;
+    height: 60px;
+    margin: auto;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 20px 20px 20px 20px;
+    color: white;
+    background: black;
+    border: solid white 1px;
+  }
   .input-box{
     margin: 0;
     padding: 0;
