--- a/src/pages/account/account.scss
+++ b/src/pages/account/account.scss
@@ -406,6 +406,10 @@ page-account {
           color: #E74371;
           font-weight: bolder;
         }
+        ion-icon
+        {
+          font-size: 1.5em;
+        }
       }
 
       .calendar-body
