--- a/src/pages/info/info.scss
+++ b/src/pages/info/info.scss
@@ -10,7 +10,7 @@ page-info {
         padding:0px !important;
         margin-top:0px !important;
     }
-    .header-parking { 
+    .header-parking {
         text-align: center;
         width: 100%;
         height: 100px;
@@ -29,7 +29,7 @@ page-info {
         color: red; // here, instead of "red" you can use sass variable if it was already defined
     }
     .ion-label{
-        
+
     font-size: 20px;
     font-weight: 700 ;
     }
@@ -279,5 +279,129 @@ page-info {
         position: fixed;
         right: 10%;
         bottom: 5%;
+    }
+
+    .contents
+    {
+      background: black;
+      margin-top:45px;
+      .room-current
+      {
+        margin-top: 10%;
+        padding: 3%;
+        .title-div
+        {
+          .square
+          {
+            color: rgb(254, 184, 45);
+          }
+          .text
+          {
+            color: white;
+            font-size: 20px;
+          }
+        }
+
+        .chart-div
+        {
+          color: black;
+          text-align: center;
+          .name-keys, .datas{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            span{
+              display: inline-block;
+              width: calc(100% / 7);
+            }
+            span:nth-child(n+1)
+            {
+              border-left: solid 1px white;
+            }
+          }
+          .name-keys
+          {
+            background-color: rgb(255,240,200);
+            border-bottom: solid 1px black;
+          }
+          .datas
+          {
+            background-color: rgb(240, 240, 240);
+            border-bottom: solid 1px rgb(176, 176, 176);
+          }
+        }
+      }
+
+      .vacancy-current
+      {
+        margin-top: 10%;
+        padding: 3%;
+        .title-div
+        {
+          .square
+          {
+            color: rgb(254, 184, 45);
+          }
+          .text
+          {
+            color: white;
+            font-size: 20px;
+          }
+        }
+
+
+
+        .chart-div
+        {
+          border: solid 1px white;
+          .flex-div:nth-child(n+2)
+          {
+            border-top: solid 1px white;
+          }
+          .flex-div > .chart-name
+          {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            background-color: green;
+            span:nth-child(n+2)
+            {
+              border-left: solid 1px white;
+              flex: 1;
+            }
+            span:first-child
+            {
+              font-size: 20px;
+              text-align: center;
+              flex: 3;
+            }
+          }
+
+          .chart-datas
+          {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            background-color: rgb(255,240,200);
+            span{
+              text-align: center;
+              display: inline-block;
+              width: calc(100% / 6);
+            }
+            span:nth-child(n+2)
+            {
+              border-left: solid 1px rgb(117,117,117);
+            }
+            span:nth-child(7n)
+            {
+              border-left: none
+            }
+            span:nth-child(n+7)
+            {
+              border-top: solid 1px rgb(117,117,117);
+            }
+          }
+        }
+      }
     }
 }
