--- a/src/pages/accountingmodal/accountingmodal.scss
+++ b/src/pages/accountingmodal/accountingmodal.scss
@@ -1,4 +1,5 @@
-page-editingroom {
+page-accountingmodal {
+
     .image{
         width: 35%;
         height: 100%;
@@ -90,9 +91,6 @@ min-height: 25px;
               width: 50px;
               margin-left: 15px;
       }
-      input{
-        width:60px !important;
-      }
       .datas{
         background-color: #f0f0f0;
         border-bottom: solid 1px #b0b0b0;
@@ -134,5 +132,15 @@ min-height: 25px;
           -moz-box-sizing: border-box;
           -webkit-box-sizing: border-box;
           overflow: hidden;
+        }
+
+        .newbtn{
+
+    float: right;
+    width: 40px;
+    height: 30px;
+    line-height: 30px;
+    margin-top: 10px;
+    border: solid 1px;
         }
 }
