--- a/src/pages/band/band.scss
+++ b/src/pages/band/band.scss
@@ -1,47 +1,35 @@
-page-choice {
+page-band {
 
     .header {
         position: absolute;
-        height: 60px;
+        height: 80px;
         width: 100%;
         color:white;
-    }
-    .main{
-      width: 100%;
-      display: flex;
     }
     .scroll-content{
         padding:0px !important;
         margin-top:0px !important;
     }
-    .header-parking {
+    .header-parking { 
         text-align: center;
         width: 100%;
         height: 100px;
         margin-top: 10px;
     }
+    .looping{
+        width: 100% !important;
+        display: flex;
+        padding-left: 0px !important;
+        margin-left: 30px;
+    }
     .segactive{
         background: blue !important;
-    }
-    .area{
-        height: 100%;
-        background-color: white;
     }
     .segment-button {
         color: red; // here, instead of "red" you can use sass variable if it was already defined
     }
-    .looping{
-      padding-left:0px; 
-      padding-right:0px;
-      padding-bottom: 5px;
-      padding-top:5px;
-      text-align: center;
-    }
-    .segactive{
-        background: blue !important;
-    }
     .ion-label{
-
+        
     font-size: 20px;
     font-weight: 700 ;
     }
@@ -149,23 +137,23 @@ page-choice {
         left: 250px;
     }
     .segment-md .segment-button{
-        height: 40px !important;
+        height: auto !important;
     }
     .ion-segment {
         position: absolute;
         color: white;
+        top: 90px;
     }
 
     .ion-label {
         color: white;
-        margin:0px !important;
     }
 
     .ion-label-area {
         position: absolute;
         width: 100%;
         height: 100%;
-        top: 70px;
+        top: 150px;
         background-color: black;
         height: calc(100% - 132px);
         overflow-y: scroll;
@@ -254,23 +242,24 @@ page-choice {
     }
 
     .panel-4 {
+        padding: 0px 18px;
+        display: none;
         columns: white;
-        width:100%;
         overflow: hidden;
-        padding-top: 10px;
-        padding-bottom: 10px;
     }
     .fab .button-inner{
         font-size:30px;
     }
     .panel-4 > div {
-        width: 100%;
+        width: 50%;
+        padding-left: 18px;
+        float: left;
 
         span {
             display: block;
             margin: 5px;
             text-align: left;
-            font-size:12px;
+            font-size:20px;
         }
         br {
             display: block;
@@ -283,170 +272,12 @@ page-choice {
     }
 
     .panel-4 > div:nth-child(n + 2) {
+        text-align: end;
     }
 
     .foot-menu {
         position: fixed;
         right: 10%;
         bottom: 5%;
-    }
-
-    .contents
-    {
-      background: black;
-      margin-top:45px;
-      .room-current
-      {
-        margin-top: 10%;
-        padding: 3%;
-        .title-div
-        {
-          .square
-          {
-            color: rgb(254, 184, 45);
-          }
-          .text
-          {
-            color: white;
-            font-size: 20px;
-          }
-        }
-
-        .chart-div
-        {
-          color: black;
-          text-align: center;
-          .name-keys, .datas{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            span{
-              display: inline-block;
-              width: calc(100% / 8);
-            }
-            span:nth-child(n+1)
-            {
-              border-left: solid 1px white;
-            }
-          }
-          .name-keys
-          {
-            background-color: rgb(255,240,200);
-            border-bottom: solid 1px black;
-          }
-          .datas
-          {
-            background-color: rgb(240, 240, 240);
-            border-bottom: solid 1px rgb(176, 176, 176);
-          }
-          span{
-            font-size:8px;
-          }
-        }
-      }
-
-      .vacancy-current
-      {
-        margin-top: 10%;
-        padding: 3%;
-        .title-div
-        {
-          .square
-          {
-            color: rgb(254, 184, 45);
-          }
-          .text
-          {
-            color: white;
-            font-size: 20px;
-          }
-        }
-
-
-
-        .chart-div
-        {
-          border: solid 1px white;
-          .flex-div:nth-child(n+2)
-          {
-            border-top: solid 1px white;
-          }
-          .flex-div > .chart-name
-          {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            background-color: white;
-            border:solid 1px;
-            span:nth-child(n+2)
-            {
-              border-left: solid 1px white;
-              flex: 1;
-            }
-            span:first-child
-            {
-              font-size: 20px;
-              text-align: center;
-              flex: 3;
-            }
-          }
-
-          .chart-datas
-          {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            background-color: rgb(255,240,200);
-            span{
-              height: 50px;
-              line-height: 50px;
-              text-align: center;
-              display: inline-block;
-              width: calc(100% / 8);
-            }
-            span:nth-child(n+2)
-            {
-              border-left: solid 1px rgb(117,117,117);
-            }
-            span:nth-child(7n)
-            {
-              border-left: none
-            }
-            span:nth-child(n+7)
-            {
-              border-top: solid 1px rgb(117,117,117);
-            }
-          }
-        }
-      }
-    }
-
-    .chart-div
-    {
-      color: black;
-      text-align: center;
-      .name-keys, .datas{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        span{
-          display: inline-block;
-          width: calc(100% / 8);
-        }
-        span:nth-child(n+1)
-        {
-          border-left: solid 1px white;
-        }
-      }
-      .name-keys
-      {
-        background-color: rgb(255,240,200);
-        border-bottom: solid 1px black;
-      }
-      .datas
-      {
-        background-color: rgb(240, 240, 240);
-        border-bottom: solid 1px rgb(176, 176, 176);
-      }
     }
 }
