--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -11,6 +11,14 @@ page-signup {
     margin-left: 2%;
   }
   .newbtn{
+    width: 90px;
+    height: 80px;
+    background: white;
+    border: solid 1px;
+    border-radius: 10px;
+    margin: 10px;
+  }
+  .newbtn2{
     width: 120px;
     height: 80px;
     background: white;
