--- a/src/pages/orderdetail/orderdetail.scss
+++ b/src/pages/orderdetail/orderdetail.scss
@@ -1,3 +1,20 @@
 page-orderdetail {
-
+    .btn{
+        width: 80px;
+        height: 80px;
+        border-radius: 10px;
+        background: aliceblue;
+        background-color: antiquewhite;
+    }
+    .tt{
+        float:left;
+        margin-left: 10px;
+    }
+    .horizon{
+        height: 120px;
+    }
+    .active{
+        
+    background-color: red;
+    }
 }
